test/tests/compiler/14_pointers/invalid_parse/malformed_function_declarator_2.plx

# You can't wrap a parameter list in multiple sets of parentheses
pub fn foo((none)) i32;

